[package]
name = "beehive"
version = "0.2.2"
description = "'beehive' is a command line tool for configuring Abeeway devices over BLE."
authors = ["norbert.herbert@gmail.com"]
repository = "https://github.com/norbertherbert/beehive"
readme = "README.md"
keywords = ["abeeway"]
categories = ["command-line-utilities"]
edition = "2021"
default-run = "beehive"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
clap = { version = "4.5.4", features = ["cargo"] } 
pretty_env_logger = "0.5.0"
uuid = "1.8.0"
hex = "0.4.3"
ctrlc = "3.4.4"
futures = "0.3.30"
tokio = { version = "1.37.0", features = ["full"] }
btleplug = "0.11.5"
log = "0.4.21"
env_logger = { version = "0.11.3", features = ["color"] }

